# cellular-automata

./: Cargo.toml  LICENSE  README.md  cellular-automata.js  index.html
assets/shaders/: instancing.wgsl
src/: automaton_grid.rs  camera.rs  cell.rs  color.rs  diagnostic.rs  instancing.rs  lib.rs  main.rs  rule.rs  ui.rs
