[package]
name = "cellular-automata"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
bevy_egui = "0.29.0"
bevy_panorbit_camera = "0.19.2"
bevy_screen_diagnostics = "0.6.0"
bytemuck = "1.17.0"
egui = "0.28.1"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
